Fix - Aligned searchbar and icon in true center
Add extra wrapping divs to use as flex items to align searchbar, lists button and sort+filter buttons correctly as per: "https://stackoverflow.com/questions/66776427/how-to-move-items-inside-div-relative-to-its-parent-div"

--- a/root/frontend/src/components/SearchResultsView/SearchResultsView.css
+++ b/root/frontend/src/components/SearchResultsView/SearchResultsView.css
@@ -8,6 +8,7 @@
     margin-left: -8px;
     margin-right: -8px;
     height: 15vh;
+    /* max-height: 100px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,11 +25,14 @@
     margin: auto;
     /* Does nothing but may be needed in future */
     text-align: center;
+
 }
 .icon {
     position: absolute;
     padding: 10px;
     min-width: 40px;
+    left:-15px;
+    top:-7px
     /* z-index: 1000; */
 }
 .srv-sort {
@@ -44,9 +48,28 @@
     margin-bottom: 2.5vh;
     cursor: pointer;
 }
+.srv-buttons {
+    align-self: flex-end;
+    margin-left: auto;
+}
 .srv-results-container {
     display: flex;
     flex-wrap: wrap;
+}
+.left.inner-wrapper, .right.inner-wrapper {
+    flex:1;
+    display:flex;
+}
+.left.inner-wrapper {
+    align-self: flex-start;
+    margin-right: auto;
+}
+.right.inner-wrapper {
+    align-self: flex-end;
+    /* margin-left: auto; */
+}
+.centre.inner-wrapper {
+    position:relative;
 }
 .srv-top-button {
     position: fixed;
